juntei tudo e comentei alguns css que tavam deixando o site cagado vai ter q ajeitar mt coisa

--- a/index.html
+++ b/index.html
@@ -1,11 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Carlinhos Pneus</title>
+    <link rel="stylesheet" href="styleF.css">
 </head>
 <body>
+
+        <header>
+        <div>
+        <img src="img/logo.jpg" alt="Uma logo com desenho de pneu">
+        </div>
+
+        <div> 
+        <h3>Carlinho`s Pneus</h3>
+        </div>
+
+
+        <nav>
+            <a href="header.html">header</a>
+            <a href="main.html">main</a>
+            <a href="index.html">index</a>
+            <a href="section.html">section</a>
+            <a href="footer.html">footer</a>
+        </nav>
+    </header>
+
+        <section> 
+            <h2>História</h2>
     
+        <p> A Carlinhos Pneus nasceu em 1998, em uma pequena oficina no interior de São Paulo, fruto do trabalho dedicado de Carlos Alberto da Silva, conhecido como Carlinhos. Com um atendimento personalizado e compromisso com a qualidade, a empresa rapidamente conquistou a confiança da comunidade local. Ao longo dos anos, expandiu seus serviços, investiu em tecnologia de ponta e construiu parcerias com as maiores marcas de pneus do mercado. Hoje, a Carlinhos Pneus é referência regional em venda, troca e manutenção de pneus, mantendo a tradição familiar e o foco no cliente como pilares do seu sucesso.</p> <br><br>
+
+        <h2>Tabela de Preços dos nossos serviços</h2>
+        <ul>
+            <li>Alinhamento - R$80,00</li>
+            <li>Balanceamento - R$50,00</li>
+            <li>Troca de Pneus - R$50,00/pneus</li>
+            <li>Reparo de Furo - R$30,00</li>
+        </ul>
+
+        <main>
+        <section id="mainSec1" >
+            <div id="introMain" >
+                <h1>Carlinho`s Pneus</h1>  <!--background de loja mecanica-->
+                <p>pneus mt brabos!!</p>
+            </div>
+        </section>
+        <section id="mainSec2" >
+            <div id="Sobre" >
+               <h2>Quem Somos:</h2>
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <br> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <br> nostrud exercitation ullamco laboris nisi ut aliquip ex ea co mmodo consequat. <br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore  <br>eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non <br> proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            </div>
+            <div id="imgSobre" >
+                <img src="" alt="">
+            </div>
+        </section>
+        <section id="mainSec3">
+            <div id="formulario" >
+               <form action="">
+                <div id="nome" >
+                    <label for="">Nome:</label>
+                    <input type="text" id="">
+                </div>
+                <div id="email" >
+                    <label for="">Insira Seu Melhor Email:</label>
+                    <input type="email" id="">
+                </div>
+                 <div id="telefone" >
+                    <label for="">Insira Seu Número:</label>
+                    <input type="number" id="">
+                </div>
+                <div id="divButton" >
+                    <button>Acessar</button>
+                </div>
+               </form>
+            </div>
+        </section>
+    </main>
+
+    </section>
+
+     <div>
+        <h3>Top 3 pneus de acordo com o Carlnhos</h3>
+        <ol>
+            <li><a href="https://www.pirelli.com/tyres/pt-br/carro/homepage">Pirelli</a></li>
+            <li><a href="https://www.goodyear.com.br/pneu-automovel">Goodyear</a></li>
+            <li><a href="https://www.michelin.com.br/">Michelin</a></li>
+        </ol>
+     </div>
+
+
+        <footer>
+
+        <div class="redes">
+        <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+        <p>Carlinhos Pneus oficial</p>
+        </div>
+         <div class="redes">
+        <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+        <p>@CarlinhosPneusfc</p></div>
+         <div class="redes">
+        <i class="fa-brands fa-tiktok"style="color: #ffffff;"></i>
+        <p>@CarlinhosPneusfc</p>
+         </div>
+        <p><em>© Direitos autorais reservados</em></p>
+
+    </footer>
 </body>
+    
 </html>
